style.css
/* The animation code */
@keyframes fade-in {
    from {opacity: 0;}
    to {opacity: 1;}
}

body {
    animation-name: fade-in;
    animation-duration: 1.2s;
    background-color: #FCF9ED;
}

#navbar {
  background-color: black;
  padding-top: 25px;
  padding-bottom: 25px;
  text-align: right;
  margin-bottom: 20px;
}

#navbar h3 {
  display: inline;
}

#navbar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#navbar li {
  display: inline;
}

#navbar a:hover {
  text-decoration: none;
  background-color: #262626;
}

#navbar .navbutton {
  font-size: 20px;
  font-weight: bold;
  font-family: Lato;
  background-color: Transparent;
  color: white;
  text-align: center;
  padding: 26px;
}

#page {
  position: relative;
  z-index: 1;
  margin: 0px;
  padding: 0px;
}

#background {
  background-color: #FCF9ED;
  background-size: cover;
  background-attachment: scroll;
  height: 100vh;
  width: 100%;
  padding-top: 50px;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
}

#project-background {
  background-color: #FCF9ED;
  background-size: cover;
  background-attachment: scroll;
  height: 100%;
  width: 100%;
  padding-top: 50px;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
}

#page h2 {
	font-size: 40px;
	color: #8D8D8D;
	font: Georgia;
  text-align: center;
  font-family: Lato;
  margin: 0px;
  padding-top: 20px;
}

#page .button-list {
  width: 75%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding-top: 30px;
  padding-left: 0px;
}

#page .button {
  font-size: 20px;
  font-family: Lato;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 0px;
  background: white;
  border-radius: 3px;
  color: #8D8D8D;
  text-align: center;
  display: inline-block;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 30px;
  padding-right: 30px;
  transition: all 0.5s ease 0s;
}

#page .button:hover {
  text-decoration: none;
  color: white;
  background: #FCD59C;
}

#page .button:link {
  text-decoration: none;
}

#page .personal_blurb_container {
  /*text-align: center;*/
  margin-left: auto;
  margin-right: auto;
  width: 50vw;
  padding-top: 20px;
  padding-left: 0px;
  padding-right: 0px;
}

#page #personal_blurb {
  color: #8D8D8D;
  font-family: Lato;
  font-size: 20px;
  width: 50vw;
  padding-top: 10px;
  text-align: center;
}

.personal_photo_container {
  padding-top: 100px;
  text-align: center;
  padding-bottom: 30px;
}

#personal_photo {
	height:	300px;
  width: 300px;
  border: solid;
  border-color: Transparent;
  border-radius: 150px;
}

#page h1 {
  text-align: center;
  padding-top: 30px;
  padding-left: 0px;
  margin-left: 0px;
  margin-bottom: 10px;
  font-family: Lato;
}

#page .project-container {
  padding-bottom: 50px;
}

#page .project {
  padding-bottom: 30px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  transition: all 0.4s ease 0s;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
}

#page .project:hover {
  background: #FCD59C;
}

#page .project-title {
  font-style: italic;
  font-family: Lato;
}

#page .project-description {
  font-family: Lato;
  font-size: 13pt;
  margin-left: 30px;
}

